force-app/main/default/objects/AR_Aging__c/AR_Aging__c.object-meta.xml
<CustomObject>
    <description>Accounts Receivable &quot;agings&quot; data - a snapshot of how much money was receivable from a customer at a particular time, organized by the due date of the payments.  These objects would typically derive their data from an external financials system.</description>
    <label>AR Aging</label>
    <nameField>
        <displayFormat>AR-{0000000}</displayFormat>
        <label>AR Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Agings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>