force-app/main/default/objects/AR_Aging__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <description>If account record type is for CNR, display CNR, otherwise display null</description>
    <formula>IF( Account__r.RecordTypeId = &apos;01250000000DVm9&apos;, &quot;CNR&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>