force-app/main/default/objects/AR_Aging__c/fields/CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyCode__c</fullName>
    <description>Invoice Currency Code from the iQ/Oracle AR Aging interface.</description>
    <inlineHelpText>Invoice Currency Code from the iQ/Oracle AR Aging interface.</inlineHelpText>
    <label>Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>