force-app/main/default/objects/AR_Aging__c/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <description>Amount of accounts receivable that are not yet past due.</description>
    <inlineHelpText>Amount of accounts receivable that are not yet past due</inlineHelpText>
    <label>Current</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>