force-app/main/default/objects/AR_Aging__c/fields/Current_Pct__c.field-meta.xml
<CustomField>
    <fullName>Current_Pct__c</fullName>
    <description>What percentage of the total amount of AR is current.</description>
    <formula>IF(Current__c =0,0,Current__c/ Total_AR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What percentage of the total amount of AR is current</inlineHelpText>
    <label>Current %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>