force-app/main/default/objects/AR_Aging__c/fields/Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>Cust_ID__c</fullName>
    <description>Cust ID from the AR Aging load</description>
    <externalId>true</externalId>
    <label>Cust ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>