force-app/main/default/objects/AR_Aging__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <description>Red flag if the total amount 31+ days past due is greater than 20%.</description>
    <formula>if( Total_Past_Due_Pct__c &gt;0.2, image(&quot;/img/samples/flag_red.gif&quot;,&quot;Total 31+ Days Past Due Is Over 20%&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Red flag if the total amount 31+ days past due is greater than 20%</inlineHelpText>
    <label>Flag</label>
    <type>Text</type>
</CustomField>