force-app/main/default/objects/AR_Aging__c/fields/Manually_Updated__c.field-meta.xml
<CustomField>
    <fullName>Manually_Updated__c</fullName>
    <formula>IF( AND(CreatedDate &lt; LastModifiedDate, LastModifiedBy.Profile.Name &lt;&gt; &apos;System Administrator&apos;, LastModifiedBy.Profile.Name &lt;&gt; &apos;QES Interface&apos;), &quot;YES&quot;, &quot;NO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Has this AR Aging record been manually updated in Salesforce.com since it was loaded on the Snapshot date.</inlineHelpText>
    <label>Manually Updated?</label>
    <type>Text</type>
</CustomField>