force-app/main/default/objects/AR_Aging__c/fields/Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this the most recent AR agings snapshot for this account?</description>
    <inlineHelpText>Is this the most recent AR agings snapshot for this account?</inlineHelpText>
    <label>Most Recent?</label>
    <type>Checkbox</type>
</CustomField>