force-app/main/default/objects/AR_Aging__c/fields/Past_Due_61_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_61_90_Days__c</fullName>
    <description>Amount of accounts receivable that are 61-90 days past due.</description>
    <inlineHelpText>Amount of accounts receivable that are 61-90 days past due</inlineHelpText>
    <label>61-90 Days Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>