force-app/main/default/objects/AR_Aging__c/fields/Past_Due_61_90_Days_Pct__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_61_90_Days_Pct__c</fullName>
    <description>What percentage of the total amount of AR is 61-90 days past due.</description>
    <formula>IF(Past_Due_61_90_Days__c=0,0,Past_Due_61_90_Days__c / Total_AR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What percentage of the total amount of AR is 61-90 days past due</inlineHelpText>
    <label>61-90 Days Past Due %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>