force-app/main/default/objects/AR_Aging__c/fields/Past_Due_91_Days_Pct__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_91_Days_Pct__c</fullName>
    <description>What percentage of the total amount of AR is more than 90 days past due.</description>
    <formula>IF(Past_Due_91_Days__c =0,0,Past_Due_91_Days__c/ Total_AR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What percentage of the total amount of AR is more than 90 days past due</inlineHelpText>
    <label>91+ Days Past Due %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>