force-app/main/default/objects/AR_Aging__c/fields/PastDue__c.field-meta.xml
<CustomField>
    <fullName>PastDue__c</fullName>
    <description>PastDue from Oracle data load</description>
    <inlineHelpText>Represents the total of all outstanding invoices where the invoice due date is less than the date of the Oracle AR Aging snapshot.</inlineHelpText>
    <label>Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>