force-app/main/default/objects/AR_Aging__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date on which this snapshot of an account&apos;s AR aging history was taken.</description>
    <inlineHelpText>Date on which this snapshot of an account&apos;s AR aging history was taken</inlineHelpText>
    <label>Snapshot Date</label>
    <type>Date</type>
</CustomField>