force-app/main/default/objects/AR_Aging__c/fields/Total_AR__c.field-meta.xml
<CustomField>
    <fullName>Total_AR__c</fullName>
    <description>Total of all accounts receivable for this account, regardless of aging.</description>
    <formula>Current__c  + Past_Due_1_30_Days__c + Past_Due_31_60_Days__c + Past_Due_61_90_Days__c + Past_Due_91_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of all accounts receivable for this account, regardless of aging</inlineHelpText>
    <label>Total AR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>