force-app/main/default/objects/AR_Aging__c/fields/Total_Oracle_AR__c.field-meta.xml
<CustomField>
    <fullName>Total_Oracle_AR__c</fullName>
    <description>Total AR as shown in Oracle.</description>
    <inlineHelpText>Total AR as shown in Oracle and populated via the Oracle / Salesforce AR interface.</inlineHelpText>
    <label>Total Oracle AR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>