force-app/main/default/objects/AR_Aging__c/fields/Total_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Past_Due__c</fullName>
    <description>Total of all accounts receivable for this account that are past due.</description>
    <formula>Past_Due_31_60_Days__c + Past_Due_61_90_Days__c + Past_Due_91_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of all accounts receivable for this account that are past due</inlineHelpText>
    <label>Past Due &gt; 31 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>