force-app/main/default/objects/AR_Aging__c/fields/Total_Past_Due_Pct__c.field-meta.xml
<CustomField>
    <fullName>Total_Past_Due_Pct__c</fullName>
    <description>What percentage of the total amount of AR is past due.</description>
    <formula>IF (Total_AR__c &gt; 0, Total_Past_Due__c / Total_AR__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What percentage of the total amount of AR is past due</inlineHelpText>
    <label>Percent &gt; 31 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>