force-app/main/default/objects/AR_Aging__c/listViews/AllCNRAging.listView-meta.xml
<ListView>
    <fullName>AllCNRAging</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Current__c</columns>
    <columns>Flag__c</columns>
    <columns>Past_Due_1_30_Days__c</columns>
    <columns>Past_Due_31_60_Days__c</columns>
    <columns>Past_Due_61_90_Days__c</columns>
    <columns>Past_Due_91_Days__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccountType__c</field>
        <operation>equals</operation>
        <value>CNR</value>
    </filters>
    <label>All CNR Aging</label>
    <language>en_US</language>
</ListView>