force-app/main/default/objects/AR_Aging__c/listViews/AllNonCNRAging.listView-meta.xml
<ListView>
    <fullName>AllNonCNRAging</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Current__c</columns>
    <columns>PastDue__c</columns>
    <columns>Past_Due_1_30_Days__c</columns>
    <columns>Past_Due_31_60_Days__c</columns>
    <columns>Past_Due_61_90_Days__c</columns>
    <columns>Past_Due_91_Days__c</columns>
    <columns>Total_AR__c</columns>
    <columns>Flag__c</columns>
    <columns>CurrencyCode__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccountType__c</field>
        <operation>notEqual</operation>
        <value>CNR</value>
    </filters>
    <label>All Non CNR Aging</label>
    <language>en_US</language>
</ListView>