force-app/main/default/objects/AR_Aging__c/listViews/MostRecentAR.listView-meta.xml
<ListView>
    <fullName>MostRecentAR</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Current__c</columns>
    <columns>Total_AR__c</columns>
    <columns>Total_Oracle_AR__c</columns>
    <columns>Past_Due_1_30_Days__c</columns>
    <columns>Past_Due_31_60_Days__c</columns>
    <columns>Past_Due_61_90_Days__c</columns>
    <columns>Past_Due_91_Days__c</columns>
    <columns>PastDue__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Most_Recent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Most Recent AR Aging</label>
    <language>en_US</language>
</ListView>